force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Contact_Match_First_Name_Fields__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Contact_Match_First_Name_Fields__c</fullName>
    <inlineHelpText>Una lista de campos de correos electrónicos de contactos adicionales separados por punto y coma para realizar una comparación cuando se realice la combinación de contactos. . Por ejemplo, el campo del sobrenombre.</inlineHelpText>
    <label>Contact Match First Name Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>