force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Contact_Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Contact_Matching_Rule__c</fullName>
    <defaultValue>&quot;Firstname;Lastname;Email&quot;</defaultValue>
    <description>Determines which fields (FirstName, LastName, and/or Email) V4S uses when matching Contacts against existing Contacts on Volunteers Sites pages. Use a semicolon-separated list, for example: FirstName;Email. Specify fields by their API Name.</description>
    <inlineHelpText>Especifica qué regla a seguir cuando se trata de igualar Contactos contra contactos existentes de las páginas Voluntarios Sites . Punto y coma cadena que contiene uno o más de los campos de nombre, apellido y correo electrónico separadas .</inlineHelpText>
    <label>Contact Matching Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>