force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Personal_Site_Org_Wide_Email_Name__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Personal_Site_Org_Wide_Email_Name__c</fullName>
    <inlineHelpText>Nombre visualizado de la dirección de correo electrónico de la Organization-Wide que debe utilicarse en el correo electrónico enviado desde la página web de Busqueda de Contactos Sitio Personal</inlineHelpText>
    <label>Personal Site Org-Wide Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>