force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Personal_Site_Requires_URL_Email_Match__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Personal_Site_Requires_URL_Email_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the Personal Site link needs to include the Email URL parameter, which V4S uses to match against an email field on the specified Contact.</description>
    <inlineHelpText>If checked, then the Personal Site requires the Email URL parameter is included and matches an Email field on the specified Contact.</inlineHelpText>
    <label>Personal Site Requires URL Email Match</label>
    <type>Checkbox</type>
</CustomField>