force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Signup_Bucket_Account_On_Create__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Signup_Bucket_Account_On_Create__c</fullName>
    <inlineHelpText>Nombre de la cuenta a utilizar cuando se crean nuevos contactos. Si está utilizando el modelo One-to-One, deje este campo en blanco. Si está utilizando el modelo bucket/ account, ajuste este campo con el nombre de la cuenta</inlineHelpText>
    <label>Signup Bucket Account On Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>