force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Signup_Creates_Contacts_If_No_Match__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Signup_Creates_Contacts_If_No_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si no se encuentra un contacto existente (o no está marcado Registro de coincidencias con contactos existentes),  el formulario de Registro de Voluntarios creará nuevos registros de contactos.</inlineHelpText>
    <label>Signup Creates Contacts If No Match</label>
    <type>Checkbox</type>
</CustomField>