force-app/main/default/objects/GW_Volunteers__Volunteers_Settings__c/fields/GW_Volunteers__Signup_Matches_Existing_Contacts__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Signup_Matches_Existing_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>En el caso de que la página de Registro de Voluntarios intente hace coincidir a la persona con un contacto existente (por Nombre, Apellido, Correo electrónico)</inlineHelpText>
    <label>Signup Matches Existing Contacts</label>
    <type>Checkbox</type>
</CustomField>